--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -164,8 +164,9 @@ jobs:
             "export RELEASE_ID=`"$env:RELEASE`"",
             '',
             'echo "Node version:"',
-            'node -v || true',
-            'node -e "const major=parseInt(process.versions.node.split(`.`)[0],10); if(major<18){console.error(`Node >=18 required for Prisma`); process.exit(1)}" ',
+            'node -v',
+            'major=$(node -p "parseInt(process.versions.node.split(\'.\')[0],10)")',
+            'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
             'else',
@@ -395,8 +396,9 @@ jobs:
             "export RELEASE_ID=`"$env:RELEASE`"",
             '',
             'echo "Node version:"',
-            'node -v || true',
-            'node -e "const major=parseInt(process.versions.node.split(`.`)[0],10); if(major<18){console.error(`Node >=18 required for Prisma`); process.exit(1)}" ',
+            'node -v',
+            'major=$(node -p "parseInt(process.versions.node.split(\'.\')[0],10)")',
+            'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
             'else',
