--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,32 +11,42 @@ services:
       - prod-data:/var/www/project-management
     environment:
       - DEBIAN_FRONTEND=noninteractive
-    command: >
-      bash -c "
-      set -e &&
-      echo 'Iniciando configuración del servidor...' &&
-      apt-get update -qq &&
-      apt-get install -y openssh-server sudo rsync nodejs npm postgresql-client curl > /dev/null 2>&1 &&
-      echo 'Creando estructura de directorios...' &&
-      mkdir -p /var/www/project-management/releases &&
-      mkdir -p /var/www/project-management/shared &&
-      echo 'Creando usuario deploy...' &&
-      (id -u deploy > /dev/null 2>&1 || useradd -m -s /bin/bash deploy) &&
-      echo 'deploy:deploy123' | chpasswd &&
-      echo 'deploy ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&
-      echo 'Configurando SSH...' &&
-      mkdir -p /home/deploy/.ssh &&
-      touch /home/deploy/.ssh/authorized_keys &&
-      chmod 700 /home/deploy/.ssh &&
-      chmod 600 /home/deploy/.ssh/authorized_keys &&
-      chown -R deploy:deploy /home/deploy &&
-      chown -R deploy:deploy /var/www/project-management &&
-      echo 'Iniciando SSH daemon...' &&
-      mkdir -p /var/run/sshd &&
-      /usr/sbin/sshd -D &
-      echo 'Servidor configurado correctamente' &&
-      tail -f /dev/null
-      "
+    command: |
+      bash -lc '
+        set -euo pipefail
+
+        echo "Iniciando configuración del servidor..."
+        apt-get update -qq
+
+        # Dependencias base
+        apt-get install -y openssh-server sudo rsync postgresql-client curl ca-certificates gnupg > /dev/null 2>&1
+
+        # Node.js 20 (requerido para Prisma moderno)
+        curl -fsSL https://deb.nodesource.com/setup_20.x | bash - > /dev/null 2>&1
+        apt-get install -y nodejs > /dev/null 2>&1
+
+        echo "Creando estructura de directorios..."
+        mkdir -p /var/www/project-management/releases
+        mkdir -p /var/www/project-management/shared
+
+        echo "Creando usuario deploy..."
+        id -u deploy > /dev/null 2>&1 || useradd -m -s /bin/bash deploy
+        echo "deploy:deploy123" | chpasswd
+        echo "deploy ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+        echo "Configurando SSH..."
+        mkdir -p /home/deploy/.ssh
+        touch /home/deploy/.ssh/authorized_keys
+        chmod 700 /home/deploy/.ssh
+        chmod 600 /home/deploy/.ssh/authorized_keys
+
+        chown -R deploy:deploy /home/deploy
+        chown -R deploy:deploy /var/www/project-management
+
+        echo "Iniciando SSH daemon..."
+        mkdir -p /var/run/sshd
+        exec /usr/sbin/sshd -D
+      '
     networks:
       - prod-network
     healthcheck:
