fix: escape node version check for PowerShell deploy script

--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -165,7 +165,7 @@ jobs:
             '',
             'echo "Node version:"',
             'node -v',
-            'major=$(node -p "parseInt(process.versions.node.split(\'.\')[0],10)")',
+            'major=$(node -p "parseInt(process.versions.node.split(\\\".\\\")[0],10)")',
             'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
@@ -397,7 +397,7 @@ jobs:
             '',
             'echo "Node version:"',
             'node -v',
-            'major=$(node -p "parseInt(process.versions.node.split(\'.\')[0],10)")',
+            'major=$(node -p "parseInt(process.versions.node.split(\\\".\\\")[0],10)")',
             'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
