fix: ignore Windows known_hosts and fix node major parsing

--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -114,6 +114,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-p", $env:STAGING_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -165,7 +167,7 @@ jobs:
             '',
             'echo "Node version:"',
             'node -v',
-            'major=$(node -p "parseInt(process.versions.node.split(\\\".\\\")[0],10)")',
+            'major=$(node -p "parseInt(process.versions.node.split(String.fromCharCode(46))[0],10)")',
             'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
@@ -194,6 +196,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-P", $env:STAGING_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -208,6 +212,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-p", $env:STAGING_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -280,7 +286,7 @@ jobs:
           
           # Execute rollback remotely (avoid piping CRLF)
           $rollbackCmd = "bash -lc 'set -e; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; if command -v pm2 >/dev/null 2>&1; then pm2 restart project-management-api --update-env || true; fi; else echo \"No previous release found for rollback\"; exit 1; fi'"
-          & ssh -i "$sshDir\deploy_key" -p $env:STAGING_PORT -o StrictHostKeyChecking=no -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
+          & ssh -i "$sshDir\deploy_key" -p $env:STAGING_PORT -o StrictHostKeyChecking=no -o UserKnownHostsFile=NUL -o GlobalKnownHostsFile=NUL -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
 
   deploy_production:
     name: Deploy to Production
@@ -346,6 +352,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-p", $env:PROD_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -397,7 +405,7 @@ jobs:
             '',
             'echo "Node version:"',
             'node -v',
-            'major=$(node -p "parseInt(process.versions.node.split(\\\".\\\")[0],10)")',
+            'major=$(node -p "parseInt(process.versions.node.split(String.fromCharCode(46))[0],10)")',
             'if [ "$major" -lt 18 ]; then echo "Node >=18 required for Prisma" >&2; exit 1; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
@@ -426,6 +434,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-P", $env:PROD_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -440,6 +450,8 @@ jobs:
             "-i", "$sshDir\deploy_key",
             "-p", $env:PROD_PORT,
             "-o", "StrictHostKeyChecking=no",
+            "-o", "UserKnownHostsFile=NUL",
+            "-o", "GlobalKnownHostsFile=NUL",
             "-o", "BatchMode=yes",
             "-o", "IdentitiesOnly=yes",
             "-o", "PreferredAuthentications=publickey",
@@ -512,4 +524,4 @@ jobs:
           
           # Execute rollback remotely (avoid piping CRLF)
           $rollbackCmd = "bash -lc 'set -e; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; if command -v pm2 >/dev/null 2>&1; then pm2 restart project-management-api --update-env || true; fi; else echo \"No previous release found for rollback\"; exit 1; fi'"
-          & ssh -i "$sshDir\deploy_key" -p $env:PROD_PORT -o StrictHostKeyChecking=no -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
+          & ssh -i "$sshDir\deploy_key" -p $env:PROD_PORT -o StrictHostKeyChecking=no -o UserKnownHostsFile=NUL -o GlobalKnownHostsFile=NUL -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
